<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_popular">Popular</string>
    <string name="action_top_rated">Top Rated</string>
    <string name="action_favorite">Favorite</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="poster_image_content">PosterImageContent</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="favorite">Favorite</string>
    <string name="cast">Cast</string>
    <string name="trailers">Trailers</string>

    <string name="movie">Movie</string>
    <string name="tv">TV</string>
    <string name="videos">Videos</string>

    <string name="dummy_title">Title</string>
    <string name="dummy_year">2019</string>
    <string name="dummy_rating">7.3</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="top_rated_movie">Top Rated Movie</string>
    <string name="trending_movie">Trending Movie</string>
    <string name="popular_tv">Popular TV</string>
    <string name="top_rated_tv">Top Rated TV</string>
    <string name="overview">Overview</string>
    <string name="see_all">See All</string>
</resources>
