<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie_detail.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/FontHeader" android:layout_margin="@dimen/default_margin"/>

        <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/poster_image_content"
                android:src="@mipmap/ic_launcher"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" android:layout_margin="@dimen/default_margin"/>
        <Button
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_as_favorite"
                app:layout_constraintLeft_toRightOf="@+id/iv_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating" android:layout_margin="@dimen/default_margin"/>


        <TextView
                android:text="@string/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_overview_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster"
                style="@style/FontHeader" android:layout_margin="@dimen/default_margin"/>
        <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_light"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_title"
                app:layout_constraintLeft_toLeftOf="parent" android:layout_margin="@dimen/default_margin"/>
        <TextView
                android:id="@+id/tv_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_light"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/FontHeader" app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:layout_constraintLeft_toRightOf="@+id/iv_poster" android:layout_margin="@dimen/default_margin"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/videos"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                android:id="@+id/tv_videos_title"
                style="@style/FontHeader" android:layout_margin="@dimen/default_margin"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_videos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_videos_title"
                android:layout_margin="@dimen/default_margin"/>

        <TextView
                android:id="@+id/tv_cast_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cast"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_videos" style="@style/FontHeader"
                android:layout_margin="@dimen/default_margin"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cast_title" android:layout_margin="@dimen/default_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>